# LanternOS-2023

./: Cargo.toml  LICENSE.md  Makefile  README  README.md  about.toml  build.rs  common.ld  license.html  linker.ld  rust-toolchain.toml
.cargo/: config.toml
bootloader/raspi/: Cargo.toml  build.rs  linker.ld
bootloader/raspi/src/: boot_alloc.rs  el_transition.S  init_mmu.rs  linker_vars.rs  main.rs  memory_map.rs  start.S  start_secondary.S
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: main.rs  start.S  util.rs
kernel/src/fs/: mod.rs
kernel/src/memory/: frame_allocator.rs  map.rs  mod.rs  paging.rs
kernel/src/peripherals/: mod.rs  uart.rs
libs/arch/raspi/: Cargo.toml
libs/arch/raspi/concurrency/: Cargo.toml
libs/arch/raspi/concurrency/src/: barrier.rs  dummylock.rs  lib.rs  mutex.rs  spinlock.rs
libs/arch/raspi/exception/: Cargo.toml
libs/arch/raspi/exception/src/: context.S  lib.rs  trampoline.S
libs/arch/raspi/memory/: Cargo.toml
libs/arch/raspi/memory/src/: lib.rs  memory_map.rs  page_frame_allocator.rs  page_table.rs
libs/arch/raspi/paging/: Cargo.toml
libs/arch/raspi/paging/src/: lib.rs
libs/arch/raspi/peripherals/: Cargo.toml  LICENSE-EMMC
libs/arch/raspi/peripherals/src/: emmc.rs  lib.rs  mailbox.rs  timer.rs  uart.rs
libs/arch/raspi/src/: lib.rs
libs/arch/raspi/src/concurrency/: barrier.rs  mod.rs  mutex.rs
libs/arch/raspi/src/exception/: mod.rs  vector.S
libs/arch/raspi/src/memory/: memory_map.rs  mod.rs  page_table.rs
libs/arch/raspi/src/peripherals/: emmc.rs  mailbox.rs  mod.rs  uart.rs
libs/elf-parse/: Cargo.toml
libs/elf-parse/src/: lib.rs
libs/page-frame-allocator/: Cargo.toml
libs/page-frame-allocator/src/: lib.rs
src/: main.rs  mmio.rs  start.S  util.rs
src/concurrency/: spinlock.rs
src/drivers/uart/: mod.rs
src/memory/: frame_allocator.rs  init_mmu.rs  map.rs  mod.rs  paging.rs  util.rs
src/peripherals/: mailbox.rs  mmio.rs  mod.rs  uart.rs
