[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
raspi-concurrency = { path = "../libs/arch/raspi/concurrency" }
raspi-peripherals = { path = "../libs/arch/raspi/peripherals" }
raspi-memory = { path = "../libs/arch/raspi/memory" }
raspi-exception = { path = "../libs/arch/raspi/exception" }
generic_once_cell = "0.1.1"
tock-registers = "0.8.1"
aarch64-cpu = { version = "9.x.x" }
allocators = { git = "https://github.com/MatthewZelriche/lantern-allocators" }

[dependencies.arrayvec]
version = "0.7.4"
default-features = false
