[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
generic_once_cell = "0.1.1"
tock-registers = "0.8.1"
aarch64-cpu = { version = "9.x.x" }
allocators = { git = "https://github.com/MatthewZelriche/lantern-allocators" }
fatfs = { default-features = false, git = "https://github.com/rafalh/rust-fatfs", rev="8831657" }

[dependencies.raspi]
path = "../libs/arch/raspi"
features = ["qemu"]  # TODO: Support bare metal

[dependencies.arrayvec]
version = "0.7.4"
default-features = false
