[package]
name = "bootloader-raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
raspi-concurrency = { path = "../../libs/arch/raspi/concurrency" }
raspi-peripherals = { path = "../../libs/arch/raspi/peripherals" }
raspi-paging = { path = "../../libs/arch/raspi/paging" }
page-frame-allocator = { path = "../../libs/page-frame-allocator" }
elf-parse = { path = "../../libs/elf-parse" }
generic_once_cell = "0.1.1"
align-data = "0.1.0"

[dependencies.fdt-rs]
version = "0.4.3"
default-features = false

[dependencies.arrayvec]
version = "0.7.4"
default-features = false
