[package]
name = "bootloader-raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
raspi-concurrency = { path = "../../libs/arch/raspi/concurrency" }
raspi-peripherals = { path = "../../libs/arch/raspi/peripherals" }
raspi-memory = { path = "../../libs/arch/raspi/memory" }
elf-parse = { path = "../../libs/elf-parse" }
generic_once_cell = "0.1.1"
align-data = "0.1.0"
tock-registers = "0.8.1"
aarch64-cpu = "9.3.1"
lock_api = "0.4.10"

[dependencies.fdt-rs]
version = "0.4.3"
default-features = false

[dependencies.arrayvec]
version = "0.7.4"
default-features = false
